Cascading Change Log

2.5.1 [unreleased]

  Updated Hadoop 1 platform tests to enable default num task retries.

2.5.0

  Updated c.f.BaseFlow to fail when deleting resources fails.

  Updated c.t.h.PartitionTap to append sequence numbers to part files to prevent filename collisions within a task.

  Added the c.f.FlowStepListener listener interface and subsequent listener support to c.f.FlowStep. @Ahmed--Mohsen

  Updated Hadoop 1 dependency to use Hadoop 1.2.1.

  Updated c.f.h.p.HadoopFlowStepJob to call kill only jobs on that are not complete. In theory calling kill on a
  completed job should have no effect, but resulting logs could be confusing during postmortem.

  Added c.t.l.PartitionTap and c.t.h.PartitionTap to replace c.t.l.TemplateTap and c.t.h.TemplateTap respectively. The
  PartitionTap can be used as both a sink and source and provides pluggable partitioning via c.t.p.Partition.

  Added c.p.j.BufferJoin as a convenience to flag to the planner the following c.o.Buffer implements a join strategy.

  Updated c.o.BufferCall to allow access to the current c.p.j.JoinerClosure to allow for more complex join operations
  to be built out within a c.o.Buffer implementation.

  Added support for Apache Hadoop 2 and YARN.

2.2.1

  Updated Hadoop platform to fail during planning if "mapred.job.tracker" is not set.

  Updated c.t.h.Hfs to improve duplicate identifier check performance. @gianm

  Fixed issue where resolved fields were not properly presented to c.t.MultiSinkTap child c.t.Tap and c.s.Scheme
  instances preventing header information from being written in the case of TextDelimited files.

  Fixed issue where the number of fields parsed by c.s.u.DelimitedParser were greater than those declared could cause
  an j.l.ArrayIndexOutOfBoundsException.

  Fixed issue where a race condition could cause a NPE between c.c.Cascade#start() and Cascade#stop().

2.2.0
