@@ -2,6 +2,8 @@ Cascading Change Log
 
 2.5.1 [unreleased]
 
+  Fixed issue in c.c.Cascade where a race condition during start/stop/complete could result in state exception.
+
   Updated Hadoop 1 platform tests to enable default num task retries.
 
 2.5.0
